--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,14 @@ body {
     height: 80px;
 }
 
-.about p {
+.info p {
     font-size: larger;
     font-weight: 400;
 }
 
+.tg {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
 
 
