--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 body {
-    background: rgba(0, 0, 0, 0.2);
+    background: yellowgreen;
+    /* background: rgba(0, 0, 0, 0.2); */
     /* background-position: center; */
     /* background-repeat: no-repeat; */
     /* background-size: cover; */
@@ -18,6 +19,7 @@ body {
 
 .header img {
     float: left;
+    color: green;
     margin-left: 0;
     border-radius: 50%;
     width: 80px;
@@ -28,57 +30,21 @@ body {
     font-size: larger;
     font-weight: 400;
 }
-
-.tg {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-.tg {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-
-.tg td {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    overflow: hidden;
-    padding: 10px 5px;
-    word-break: normal;
-}
-
-.tg th {
-    border-color: black;
-    border-style: solid;
-    border-width: 1px;
-    font-family: Arial, sans-serif;
-    font-size: 14px;
-    font-weight: normal;
-    overflow: hidden;
-    padding: 10px 5px;
-    word-break: normal;
-}
-
-.tg .tg-baqh {
-    text-align: center;
-    vertical-align: top
-}
-
 form {
     text-align: left;
     border-radius: 10px;
-    background: rgba(0, 0, 0, 0.2);
-    padding: 20px;
+    /* background: rgba(0, 0, 0, 0.2); */
+    background: greenyellow;
+    /* padding: 20px; */
+    padding: 50px;
     width: 80%;
     margin-left: 25%;
 }
 
 legend {
     text-align: center;
-    color: lightsalmon;
+    /* color: lightsalmon; */
+    color: red;
 }
 
 input[type=number],
@@ -94,8 +60,10 @@ input[type=number],
 
 input[type=submit] {
     width: 100%;
-    background-color: grey;
-    color: white;
+    /* background-color: grey; */
+    background-color: yellow;
+    /* color: white; */
+    color: black;
     padding: 10px 15px;
     margin: 8px 0;
     border: none;
@@ -104,5 +72,6 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: rgb(0, 0, 0);
+    /* background-color: rgb(0, 0, 0); */
+    background-color: red;
 }
